force-app/main/default/objects/TV_Connection__c/TV_Connection__c.object-meta.xml
<CustomObject>
    <description>Stores connection data for televisit attendee sessions.</description>
    <label>Connection</label>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Connection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>