force-app/main/default/objects/TV_Connection__c/fields/Connection_Id__c.field-meta.xml
<CustomField>
    <fullName>Connection_Id__c</fullName>
    <externalId>true</externalId>
    <label>Connection Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>