force-app/main/default/objects/TV_Connection__c/fields/CreatedAt_GMT__c.field-meta.xml
<CustomField>
    <fullName>CreatedAt_GMT__c</fullName>
    <label>CreatedAt GMT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>