force-app/main/default/objects/TV_Connection__c/fields/DestroyedAt_GMT__c.field-meta.xml
<CustomField>
    <fullName>DestroyedAt_GMT__c</fullName>
    <label>DestroyedAt GMT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>