force-app/main/default/objects/TV_Connection__c/fields/Sdk_Type__c.field-meta.xml
<CustomField>
    <fullName>Sdk_Type__c</fullName>
    <label>Sdk Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>