force-app/main/default/objects/TV_Connection__c/fields/Sdk_Version__c.field-meta.xml
<CustomField>
    <fullName>Sdk_Version__c</fullName>
    <label>Sdk Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>