force-app/main/default/objects/TV_Connection__c/fields/Televisit_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Televisit_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Televisit Attendee</label>
    <referenceTo>Televisit_Attendee__c</referenceTo>
    <relationshipLabel>Connections</relationshipLabel>
    <relationshipName>Connections</relationshipName>
    <type>Lookup</type>
</CustomField>